# HeightMapRemeshing

./: CMakeLists.txt  README.md  b.stl  procedural_mesh_4.ply  sample.txt  sample_bak.txt  sepb.stl
src/: base.cpp  base.h  heightmap.cpp  heightmap.h  main.cpp  ply.c  ply.h
